# trendsurf

./: .editorconfig  .env.sample  .gitignore  README.md  TODO.md  agents.md  implementation_plan.md  package.json  ruff.toml  run.sh
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20240531_01_initial_schema.py
apps/api/src/trendsurf_api/: main.py
apps/api/src/trendsurf_api/core/: database.py  logging.py  settings.py
apps/api/src/trendsurf_api/ingestion/: __init__.py  arxiv_client.py  pdf_fetcher.py
apps/api/src/trendsurf_api/models/: __init__.py  base.py  tables.py
apps/api/src/trendsurf_api/parsing/: __init__.py  grobid_client.py  tei_parser.py
apps/api/src/trendsurf_api/providers/: embed_client.py  gen_client.py  types.py  validators.py
apps/api/src/trendsurf_api/vectors/: __main__.py  bootstrap.py  client.py
apps/api/tests/: test_health.py
apps/frontend/: package.json  tsconfig.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/(app)/: layout.tsx
apps/frontend/components/auth/: AuthPage.tsx  PasswordResetForm.tsx  SignInForm.tsx  SignUpForm.tsx
apps/frontend/components/dashboard/: DashboardView.tsx  FeedItemCard.tsx  FeedItemSkeleton.tsx
apps/frontend/components/layout/: AppShell.tsx  NavLink.tsx  UserMenu.tsx
apps/frontend/components/papers/: PaperDetailView.tsx
apps/frontend/components/settings/: EmbeddingSettingsCard.tsx  GenerationSettingsForm.tsx  (+1 more)
apps/frontend/lib/: api-client.ts  config.ts  data-fetchers.ts  types.ts  utils.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/trendsurf_worker/: main.py
deploy/compose/: docker-compose.yml
prompts/: analysis.v1.json  novelty_critic.v1.json  tldr.v1.json
scripts/: bootstrap.sh
(+22 files in other folders)
