[tool.poetry]
name = "trendsurf-api"
version = "0.1.0"
description = "FastAPI backend for TrendSurf"
authors = ["TrendSurf Team <team@example.com>"]
packages = [
  { include = "trendsurf_api", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
httpx = "^0.27.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.18" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pyjwt = "^2.8.0"
redis = "^5.0.4"
rq = "^1.15.1"
qdrant-client = "^1.7.3"
structlog = "^24.1.0"
tenacity = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
