[tool.poetry]
name = "trendsurf-worker"
version = "0.1.0"
description = "Background worker for TrendSurf"
authors = ["TrendSurf Team <team@example.com>"]
packages = [
  { include = "trendsurf_worker", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.4"
rq = "^1.15.1"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
tenacity = "^8.3.0"
httpx = "^0.27.0"
qdrant-client = "^1.7.3"
fastapi = "^0.111.0"
pydantic = "^2.7.0"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.18" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
